--- a/index.html
+++ b/index.html
@@ -8,25 +8,40 @@
   <style>
     body {
       font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
-      background-color: #ffffff;
+      background-color: #f4f6f8;
       color: #1a1a1a;
       line-height: 1.6;
       margin: 0;
       padding: 0;
     }
     .container {
-      max-width: 720px;
-      margin: 0 auto;
-      padding: 80px 24px;
+      max-width: 760px;
+      margin: 60px auto;
+      padding: 48px 40px;
+      background-color: #ffffff;
+      border-radius: 12px;
+      box-shadow: 0 8px 30px rgba(0, 0, 0, 0.08);
+    }
+    .header {
+      display: flex;
+      align-items: center;
+      gap: 24px;
+    }
+    .photo {
+      width: 96px;
+      height: 96px;
+      border-radius: 50%;
+      background-color: #e0e0e0;
+      flex-shrink: 0;
     }
     h1 {
-      font-size: 2.2rem;
-      margin-bottom: 0.25em;
+      font-size: 2.1rem;
+      margin-bottom: 0.2em;
     }
     h2 {
-      font-size: 1.1rem;
+      font-size: 1.05rem;
       font-weight: 500;
-      color: #444;
+      color: #555;
       margin-top: 0;
     }
     p {
@@ -34,7 +49,7 @@
       font-size: 1rem;
     }
     .links {
-      margin-top: 2em;
+      margin-top: 2.2em;
     }
     .links a {
       display: inline-block;
@@ -47,16 +62,23 @@
       text-decoration: underline;
     }
     footer {
-      margin-top: 4em;
-      font-size: 0.85rem;
-      color: #666;
+      margin-top: 3.5em;
+      font-size: 0.8rem;
+      color: #777;
     }
   </style>
 </head>
 <body>
   <main class="container">
-    <h1>Elena Dries</h1>
-    <h2>Global Trade Compliance Analyst</h2>
+    <div class="header">
+      <div class="photo">
+        <img src="1683640997467.jpeg"/>
+      </div>
+      <div>
+        <h1>Elena Dries</h1>
+        <h2>Global Trade Compliance Analyst</h2>
+      </div>
+    </div>
 
     <p>
       Compliance and data professional with experience supporting export compliance analysis, denied and restricted party screening, and audit-ready documentation in regulated environments. Known for strong analytical skills, careful documentation practices, and a pragmatic approach to compliance support.
@@ -64,9 +86,13 @@
 
     <div class="links">
       <a href="mailto:career@elenadries.com">career@elenadries.com</a>
-      <a href="https://www.linkedin.com/in/elenadries/" target="_blank" rel="noopener noreferrer">LinkedIn</a>
-      <a href="Elena%20Dries%20Resume.pdf" target="_blank">Download Resume (PDF)</a>
+      <a href="https://www.linkedin.com" target="_blank" rel="noopener noreferrer">LinkedIn</a>
+      <a href="Elena_Dries_Resume.pdf" target="_blank">Download Resume (PDF)</a>
     </div>
+
+    <footer>
+      © Elena Dries
+    </footer>
   </main>
 </body>
 </html>
