--- a/index.html
+++ b/index.html
@@ -33,6 +33,14 @@
       border-radius: 50%;
       background-color: #e0e0e0;
       flex-shrink: 0;
+      overflow: hidden;
+      display: inline-block;
+    }
+    .photo img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      display: block;
     }
     h1 {
       font-size: 2.1rem;
@@ -72,7 +80,7 @@
   <main class="container">
     <div class="header">
       <div class="photo">
-        <img src="1683640997467.jpeg"/>
+        <img src="1683640997467.jpeg" alt="Elena Dries" loading="lazy"/>
       </div>
       <div>
         <h1>Elena Dries</h1>
