Fix linkedin link

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
     <div class="links">
       <a href="mailto:career@elenadries.com">career@elenadries.com</a>
-      <a href="https://www.linkedin.com" target="_blank" rel="noopener noreferrer">LinkedIn</a>
+      <a href="https://www.linkedin.com/in/elenadries/" target="_blank" rel="noopener noreferrer">LinkedIn</a>
       <a href="Elena_Dries_Resume.pdf" target="_blank">Download Resume (PDF)</a>
     </div>
   </main>
